# Pyleoclim_util

./: .coveragerc  .devcontainer.json  .gitattributes  .gitignore  .readthedocs.yaml  .readthedocs.yml  .travis.yml  425_env_slim.yml  CITATION.cff  CODE_OF_CONDUCT.md  Dockerfile  MANIFEST  MANIFEST.in  Makefile  Modules.md  MultipleSeries.csv  README.md  _sources  condaenv.6d4f03jk.requirements.txt  environment.yml  environment_dev.yml  pandas_install.sh  pyproject.toml  requirements.txt  revision_checklist.md  setup.py  start.py
.github/workflows/: build.yml  build_dev.yml  publish-pyleoclim.yml  publish.yml  testdev.yml  testmaster.yml
.ipynb_checkpoints/: PyleoclimQuickstart-checkpoint.ipynb
Documentation/: Introduction.rst  Main.rst  Makefile  Map.html  Mapping.rst  Plot.html  Pyleoclim_Documentation.md  RBchron.html  Spectral.rst  SummaryPlots.html  SummaryPlots.rst  TSPlots.rst  conf.py  genindex.html  index.rst  make.bat  objects.inv  search.html
Documentation/_modules/: pyleoclim.html
Documentation/_sources/: LipdUtils.rst.txt  Plot.rst.txt  Spectral.rst.txt
Documentation/source/: Introduction.rst  conf.py  index.rst
Example/: Africa-ColdAirCave.Sundqvist.2013.lpd  Africa-LakeTanganyi.Tierney.2010.lpd  Ant-CoastalDML.Thamban.2006.lpd  Arc-GulfofAlaska.Wiles.2014.lpd  Arc-Iceland.Bergthorsson.1969.lpd  Arc-ScreamingLynx.Clegg.2011.lpd  Asi-Dasuopu.Thompson.2000.lpd  Asia-13YET.lpd  Asia-Guliya.Thompson.1997.lpd  Eur-CentralEu.Dobrovolny.2010.lpd  Eur-CoastofPortu.Abrantes.2011.lpd  Eur-Spain.Martin-Chivelet.2011.lpd  MD98-2170.Stott.2004.lpd  MD982176.Stott.2004.lpd  MD982176_Stott_2004.lpd  O2kLR-Tagus.Abrantes.2005.lpd  Ocean2kHR-AtlanticBahamasSaenger2009.lpd  Ocean2kHR-AtlanticBahamasTOTORosenheim2005.lpd  Ocean2kHR-AtlanticBermudaKuhnert2005.lpd  Ocean2kHR-AtlanticMontegoBayHaaseSchramm2003.lpd  Ocn-MontegoBayJamaica.Haase-Schramm.2003.lpd  Ocn-TongueoftheOcean.Rosenheim.2005.lpd  PyleoclimQuickstart.ipynb  Spectral_demo.ipynb  WWZ_benchmark.ipynb  WWZ_demo.ipynb  fBm_new.ipynb  soi_data.csv  wavelet_coherrence_example.ipynb
Example/.ipynb_checkpoints/: PyleoclimQuickstart-checkpoint.ipynb  Spectral_demo-checkpoint.ipynb
Pyleoclim/: __init__.py  __main__.py  start.py
Pyleoclim.egg-info/: PKG-INFO  SOURCES.txt  pbr.json  requires.txt  top_level.txt
Pyleoclim/files/: PyleoclimQuickstart.ipynb  readme.md
Pyleoclim/pkg_resources/: MapLipd.py  PlotLipd.py  __init__.py
_build/doctrees/: Introduction.doctree  LIPDutils.doctree  Main.doctree  Map.doctree  Plot.doctree  Spectral.doctree  Stats.doctree  Timeseries.doctree
_build/html/: LIPDutils.html  Map.html  Spectral.html  index.html
_build/latex/: Pyleoclim.ilg  Pyleoclim.out
_sources/: LipdUtils.rst.txt  Plot.rst.txt
doc_build/: .gitattributes  Installation.rst  Introduction.rst  LR04_benthic_stack.csv  Makefile  Map.rst  anaconda_install.rst  citation.rst  conf.py  contribution_guide.rst  enso.csv  index.rst  installation.rst  introduction.rst  lipdutils.rst  log  make.bat  map.rst  requirements.txt  rtd_env.yml  soi.json  stats.rst  tutorials.rst
docs/: .buildinfo  Installation.html  Introduction.html  LipdUtils.html  Main.html  Map.html  Plot.html  RBchron.html  Spectral.html  Stats.html  SummaryPlots.html  Timeseries.html  citation.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js
example_data/: Ant-JamesRossIsland.Mulvaney.2013.lpd  GISP2_d18O.csv  HadCRUT.5.0.1.0.analysis.summary_series.global.annual.csv  Juxtlahuaca.Lachniet.2012.lpd  LR04.csv  MD01-2378.Xu.2008.lpd  MD98-2170.Stott.2004.lpd  Nino.json  lipds.json  metadata.yml  oni.csv  soi_data.csv  wtc_test_data_nino.csv  wtc_test_data_nino.mat  wtc_test_data_nino_even.csv
example_notebooks/: FDR_example.ipynb  Paleopandas Playground.ipynb  PyleoclimQuickstart.ipynb  Spectral Workflow_test.ipynb  WWZ_benchmark.ipynb  WWZ_benchmark.rst  WWZ_numba.ipynb  api_examples.ipynb  correlations.ipynb  filtering.ipynb  filtering_tutorial.ipynb  gen_ts.ipynb  plot_styles.ipynb  pyleoclim_correlation.ipynb  pyleoclim_time_representation.ipynb  pyleoclim_ui_tutorial.ipynb  readme.md  singular_spectrum_analysis.ipynb  stack_plot.ipynb  test_ui.ipynb  time_representation.ipynb  wavelet_coherence_example.ipynb  wavelet_coherrence_example.ipynb
examples/: Arc-LakeNataujärvi.Ojala.2005.lpd  Arc-Yukon.D'Arrigo.2006.lpd  Eur-NorthernSpain.Martín-Chivelet.2011.lpd  MD97-2121.Marr.2013.lpd  PyleoclimQuickstart.ipynb  WWZ_benchmark.ipynb  wavelet_coherrence_example.ipynb  wtc_test_data.mat
files/: readme.md
gts_test_RR/: GTS_demo.ipynb
help/: python-env-setup.md
pyleoclim/: LipdUtils.py  Map.py  Plot.py  RBchron.py  Spectral.py  Stats.py  SummaryPlots.py  Timeseries.py  __init__.py  analysis.py  api.py  debug test_SSA.ipynb  f2py_wwz.f90  ipython.html  lipdutils.py  map.py  plot.py  rbchorn.py  rbchron.py  spectral.py  stats.py  summaryplots.py  timeseries.py  visualization.py
pyleoclim.egg-info/: PKG-INFO  SOURCES.txt  pbr.json  requires.txt
scratch_notebooks/: interval_highlighting-Copy1.ipynb  interval_highlighting.ipynb  map_legend_troubleshoot.ipynb  scratch.ipynb
(+1122 files in other folders)
