[project]
name = "pyleoclim"
version = "1.3.1b"
description = "Python Package for the Analysis of Paleoclimate Data"
readme = "README.md"
license = { text = "GPL-3.0" }
authors = [
  { name = "Deborah Khider", email = "linkedearth@gmail.com" },
  { name = "Julien Emile-Geay", email = "julieneg@usc.edu" },
  { name = "Feng Zhu"},
  { name = "Alexander James"}, 
  { name = "Jordan Landers"},
  { name = "Jun Hu"},
  { name = "Myron Kwan"},
  { name = "Pratheek Athreya"},
  { name = "Daniel Garijo"},
  { name = "Lionel Voirol"},
  { name = "Robert McGibbon"},
  { name = "Dominik Stiller"},
  { name = "Jordan Landers"}
]
requires-python = ">=3.12"
dependencies = [
  "pandas>=2.1.4",
  "kneed>=0.7.0",
  "statsmodels>=0.13.2",
  "seaborn>=0.13.0",
  "scikit-learn>=0.24.2",
  "pathos>=0.2.8",
  "tqdm",
  "wget>=3.2",
  "numba>=0.56",
  "nitime>=0.9",
  "tabulate>=0.8.9",
  "cartopy>=0.22.0",
  "pyyaml",
  "beautifulsoup4",
  "scipy>=1.15.0",
  "requests"
]

[project.optional-dependencies]
dev = ["IPython", "pytest"]

[tool.setuptools.packages.find]
where = ["."]  # Look for packages starting from the root directory
include = ["pyleoclim*"]  # Include packages that match this pattern
exclude = ["tests*", "docs*"]  # Exclude these patterns

[tool.setuptools.package-data]
"pyleoclim" = ["data/*.csv", "data/*.yml"]

[project.urls]
Homepage = "https://github.com/linkedearth/pyleoclim_util"
Issues = "https://github.com/linkedearth/pyleoclim_util/issues"
Documentation = "https://pyleoclim-util.readthedocs.io/en/latest/"

[build-system]
requires = ["setuptools>=69.0.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
license-files = []
