[project]
name = "pyleoclim"
version = "1.3.1b"
description = "Python Package for the Analysis of Paleoclimate Data"
readme = "README.md"
license = { text = "GPL-3.0" }
authors = [
  { name = "Deborah Khider", email = "linkedearth@gmail.com" },
  { name = "Julien Emile-Geay", email = "julieneg@usc.edu" },
  { name = "Feng Zhu"},
  { name = "Alexander James"}, 
  { name = "Jordan Landers"},
  { name = "Jun Hu"},
  { name = "Myron Kwan"},
  { name = "Pratheek Athreya"},
  { name = "Daniel Garijo"},
  { name = "Lionel Voirol"},
  { name = "Robert McGibbon"},
  { name = "Dominik Stiller"},
  { name = "Jordan Landers"}
]
requires-python = ">=3.12"
dependencies = [
  "pandas>=3.0.1",
  "kneed>=0.8.5",
  "statsmodels>=0.14.6",
  "seaborn>=0.13.2",
  "scikit-learn>=1.8.0",
  "pathos>=0.3.5",
  "tqdm",
  "wget>=3.2",
  "numba>=0.64.0",
  "nitime>=0.12.1",
  "tabulate>=0.10.0",
  "cartopy>=0.25.0",
  "pyyaml",
  "beautifulsoup4",
  "scipy>=1.17.1",
  "requests"
]

[project.optional-dependencies]
dev = ["IPython", "pytest"]

[tool.setuptools.packages.find]
where = ["."]  # Look for packages starting from the root directory
include = ["pyleoclim*"]  # Include packages that match this pattern
exclude = ["tests*", "docs*"]  # Exclude these patterns

[tool.setuptools.package-data]
"pyleoclim" = ["data/*.csv", "data/*.yml"]

[project.urls]
Homepage = "https://github.com/linkedearth/pyleoclim_util"
Issues = "https://github.com/linkedearth/pyleoclim_util/issues"
Documentation = "https://pyleoclim-util.readthedocs.io/en/latest/"

[build-system]
requires = ["setuptools>=69.0.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
license-files = []
